--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["revupst <revup123456@gmail.com>"]
 readme = "README.md"
+packages = [{ include = "templite" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
